# Hierarchical-Memory-Transformer-PyTorch

./: .gitignore  README.md  pyproject.toml
experiments/configs/: baselines_sliding_window.yaml  baselines_vanilla.yaml  figure4_long_context.yaml  table1_arxiv.yaml  table1_pg19.yaml  table1_wikitext.yaml  table5_efficiency.yaml  table6_ablations.yaml  table7_hyperparams.yaml
experiments/notebooks/: 04_evaluation_interactive.md  training_interactive.ipynb
experiments/scripts/: prepare_wikitext.py  reproduce_paper.py  train_hmt.py
notebooks/: 01_explore_wikitext.ipynb  02_hmt_data_pipeline.ipynb  03_complete_hmt_pipeline.ipynb
results/experiments/exp_001_demo_table1/: config.json  metrics.csv  metrics.json
results/experiments/exp_002_demo_table1/: config.json  metrics.csv  metrics.json  report.md
results/experiments/exp_003_demo_table1/: config.json  metrics.csv  metrics.json  report.md
src/hmt/: __init__.py  baselines.py  benchmarks.py  config.py  data.py  evaluation.py  memory.py  model.py  results.py  trainer.py  training_config.py  training_utils.py  utils.py
tests/: test_data.py  test_evaluation.py  test_hmt_integration.py  test_memory.py  test_mps.py  test_training.py
